--- a/css/styles.css
+++ b/css/styles.css
@@ -11373,7 +11373,7 @@ p {
 #mainNav {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: #212529;
+  background-color: #FFB5EF;
 }
 #mainNav .navbar-toggler {
   padding: 0.75rem;
