--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ button {
   
   font-weight: 500;
   line-height: 22px;
-  display: block;
+  display: none;
   align-items: center;
   box-shadow: 2px 7px 96px -2px rgba(154, 171, 237, 1);
   -webkit-box-shadow: 2px 7px 96px -2px rgba(154, 171, 237, 1);
