--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,6 @@ button {
   border-radius: 600px;
   padding: 12px 20px;
   font-size: 20px;
-  
   font-weight: 500;
   line-height: 22px;
   display: none;
@@ -115,6 +114,15 @@ button i {
   button {
     display: flex;
   }
+ a{
+   
+   text-decoration = none;
+   
+  }
+   
+   
+  
+  
 }
 .service-bolo{
 
